# wiki-app

./: .dockerignore  Dockerfile  main.py  pyproject.toml  wiki_app.py  wiki_links.py  wiki_render.py  wiki_repo.py
templates/: base.html  history.html  index.html  page.html
wiki/: history.md  home.md  knowledge-graph.md
