[project]
name = "wiki-app"
version = "0.1.0"
description = "Git-backed markdown wiki with version tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "markdown>=3.6.0",
    "gitpython>=3.1.43",
    "jinja2>=3.1.4",
]
